# Audiograph

./: .gitignore  Anforderungen.md  README.md  config.example.toml  pyproject.toml  requirements.txt  start.bat
docs/: MANUAL_TEST.md
docs/superpowers/specs/: 2026-06-30-diktattool-design.md
src/diktattool/: __init__.py  __main__.py  app.py  config.py  hotkey.py  inserter.py  recorder.py  state.py  transcriber.py  tray.py
tests/: test_app.py  test_config.py  test_hotkey.py  test_inserter.py  test_recorder.py  test_state_machine.py  test_transcriber.py
tests/fixtures/: README.md
