[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diktattool"
version = "0.1.0"
description = "Local Whisper dictation for Windows – F12 toggle, insert transcribed text at cursor."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require the real Whisper model and CUDA/audio hardware",
]
addopts = "-ra -m 'not integration'"
